gitignore: Ignore "dot-files".
in particular, vim swap files, ".file.swp"

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
+# NOTE! Please use 'git ls-files -i --exclude-standard'
+# command after changing this file, to see if there are
+# any tracked files which get ignored after the change.
+
+# Normal rules
+*~
+.*
+
+# git files that we don't want to ignore even it they are dot-files
+!.gitignore
+
 # package directories created by scripts/tar-up_and_run_mbuild.sh
 kernel-source
 kernel-source-rt
+
 # default scratch area for scripts/sequence-patch.sh
 tmp
-# backup files
-*~
