--- a/series.conf
+++ b/series.conf
@@ -229,6 +229,7 @@
 	########################################################
 	# Suse specific stuff
 	########################################################
+	patches.suse/suse-hv-register-clocksource-only-if-its-adverti.patch
 	patches.suse/suse-hv-fate314663-0001-mm-Export-a-function-to-get-vm-committed-memory.patch
 	patches.suse/suse-hv-fate314663-0002-Drivers-hv-Add-Hyper-V-balloon-driver.patch
 	patches.suse/suse-hv-fate314663-0003-Drivers-hv-balloon-Fix-a-bug-in-the-definition-of-st.patch
