--- a/series.conf
+++ b/series.conf
@@ -220,6 +220,7 @@
 	########################################################
 	# Suse specific stuff
 	########################################################
+	patches.suse/suse-hv-register-clocksource-only-if-its-adverti.patch
 	patches.suse/suse-hv-fate314663-0003-Drivers-hv-balloon-Fix-a-bug-in-the-definition-of-st.patch
 	patches.suse/suse-hv-fate314663-0004-Drivers-hv-balloon-Fix-a-memory-leak.patch
 	patches.suse/suse-hv-fate314665-0001-Drivers-hv-Implement-routines-for-read-side-signalin.patch
