Fix build of omap2plus kernel

--- a/series.conf
+++ b/series.conf
@@ -155,6 +155,7 @@
 	patches.arch/arm-fix-build-ux500-module.diff
 	patches.arch/arm-exynos-nosparse.patch
 	patches.arch/arm-origen-regulator.patch
+	patches.arch/arm-omap2-missing-include.diff
 
 	########################################################
 	# S/390
