ARM: use zImage for "default" flavor

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -442,10 +442,17 @@ add_vmlinux()
 %endif
 %ifarch %arm
     add_vmlinux --compressed
-    # quickly compile uImage so we have something to boot from
-    make %{?_smp_mflags} uImage $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y
-    image=uImage
-    cp -p arch/arm/boot/$image %buildroot/boot/uImage-%kernelrelease-%build_flavor
+    case "%build_flavor" in
+    default)
+        image=zImage
+        ;;
+    *)
+        # quickly compile uImage so we have something to boot from
+        make %{?_smp_mflags} uImage $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y
+        image=uImage
+        ;;
+    esac
+    cp -p arch/arm/boot/$image %buildroot/boot/$image-%kernelrelease-%build_flavor
 %endif
 
 # end of build_kdump
