OMAP: Fix missing usb.h include.

--- a/series.conf
+++ b/series.conf
@@ -157,6 +157,7 @@
 	patches.arch/arm-origen-regulator.patch
 	patches.arch/arm-omap2-missing-include.diff
 	patches.arch/arm-OMAP-Fix-missing-cm3xxx.h-include.patch
+	patches.arch/arm-OMAP-Fix-missing-usb.h-include.patch
 
 	########################################################
 	# S/390
