OMAP: Fix missing cm3xxx.h include.

--- a/series.conf
+++ b/series.conf
@@ -156,6 +156,7 @@
 	patches.arch/arm-exynos-nosparse.patch
 	patches.arch/arm-origen-regulator.patch
 	patches.arch/arm-omap2-missing-include.diff
+	patches.arch/arm-OMAP-Fix-missing-cm3xxx.h-include.patch
 
 	########################################################
 	# S/390
