staging/omapdrm: garbage collect OMAP_DSS_DISPLAY_SUSPENDED.

--- a/series.conf
+++ b/series.conf
@@ -158,6 +158,7 @@
 	patches.arch/arm-omap2-missing-include.diff
 	patches.arch/arm-OMAP-Fix-missing-cm3xxx.h-include.patch
 	patches.arch/arm-OMAP-Fix-missing-usb.h-include.patch
+	patches.arch/arm-staging-omapdrm-garbage-collect-OMAP_DSS_DISPLAY_SUS.patch
 
 	########################################################
 	# S/390
