--- a/series.conf
+++ b/series.conf
@@ -159,6 +159,7 @@
 	patches.arch/arm-OMAP-Fix-missing-cm3xxx.h-include.patch
 	patches.arch/arm-OMAP-Fix-missing-usb.h-include.patch
 	patches.arch/arm-staging-omapdrm-garbage-collect-OMAP_DSS_DISPLAY_SUS.patch
+	patches.arch/arm-imx-usb.patch
 
 	########################################################
 	# S/390
