--- a/series.conf
+++ b/series.conf
@@ -214,7 +214,7 @@
 
 ## cpuidle perf events cleanups and related
 	patches.arch/perf_timechart_fix_zero_timestamps.patch
-	patches.drivers/x86_acpi_cpufreq_autoload.patch
++trenn	patches.drivers/x86_acpi_cpufreq_autoload.patch
 
 	########################################################
 	# AGP, graphics related stuff
