ALSA: hda - Fix non-snoop page handling (bnc#800701).

--- a/series.conf
+++ b/series.conf
@@ -464,6 +464,7 @@
 	##########################################################
 	# Sound
 	##########################################################
+	patches.drivers/alsa-hda-001-Fix-non-snoop-page-handling
 
 	########################################################
 	# Char / serial
