- Update Xen patches to 3.8-rc5 and c/s 1218.

--- a/series.conf
+++ b/series.conf
@@ -643,6 +643,7 @@
 	patches.xen/xen3-patch-3.6
 	patches.xen/xen3-patch-3.7
 	patches.xen/xen3-patch-3.8-rc3
+	patches.xen/xen3-patch-3.8-rc3-rc4
 
 	# ports of other patches
 	patches.xen/xen3-010-acpi_initrd_override_tables.patch
