Drivers: scsi: storvsc: Initialize the sglist.

--- a/series.conf
+++ b/series.conf
@@ -254,6 +254,7 @@
 	patches.suse/suse-hv-fate314665-0028-Drivers-hv-Cleanup-and-consolidate-reporting-of-buil.patch
 	patches.suse/suse-hv-fate314665-force-win2008.patch
 	patches.suse/suse-hv-Drivers-hv-Execute-shutdown-in-a-thread-context.patch
+	patches.suse/suse-hv-Drivers-scsi-storvsc-Initialize-the-sglist.patch
 
         ########################################################
         # Networking, IPv6
