- ptp: PTP_1588_CLOCK_PCH depends on x86.

--- a/series.conf
+++ b/series.conf
@@ -39,6 +39,7 @@
 	patches.rpmify/geode-depends-on-x86_32
 	patches.rpmify/chipidea-clean-up-dependencies
 	patches.rpmify/sb105x-remove-asm-segment-h-dependency
+	patches.rpmify/ptp-pch-depends-on-x86
 
         ########################################################
         # kABI consistency patches
