scsi: storvsc: avoid usage of WRITE_SAME.

--- a/series.conf
+++ b/series.conf
@@ -269,6 +269,7 @@
 	patches.suse/suse-hv-fate314665-force-win2008.patch
 	patches.suse/suse-hv-Drivers-hv-Execute-shutdown-in-a-thread-context.patch
 	patches.suse/suse-hv-Drivers-scsi-storvsc-Initialize-the-sglist.patch
+	patches.suse/suse-hv-scsi-storvsc-avoid-usage-of-WRITE_SAME.patch
 
         ########################################################
         # Networking, IPv6
