--- a/series.conf
+++ b/series.conf
@@ -267,6 +267,7 @@
 	patches.suse/suse-hv-fate314665-0028-Drivers-hv-Cleanup-and-consolidate-reporting-of-buil.patch
 	patches.suse/suse-hv-identify-virtual-pc-in-ata_piix.patch
 	patches.suse/suse-hv-fate314665-force-win2008.patch
+	patches.suse/suse-hv-Drivers-hv-Execute-shutdown-in-a-thread-context.patch
 
         ########################################################
         # Networking, IPv6
