--- a/series.conf
+++ b/series.conf
@@ -268,6 +268,7 @@
 	patches.suse/suse-hv-identify-virtual-pc-in-ata_piix.patch
 	patches.suse/suse-hv-fate314665-force-win2008.patch
 	patches.suse/suse-hv-Drivers-hv-Execute-shutdown-in-a-thread-context.patch
+	patches.suse/suse-hv-Drivers-scsi-storvsc-Initialize-the-sglist.patch
 
         ########################################################
         # Networking, IPv6
