drm/cirrus: Correct register values for 16bpp (bnc#799216).
Conflicts:
	series.conf

--- a/series.conf
+++ b/series.conf
@@ -413,6 +413,7 @@
 	########################################################
 	# DRM/Video
 	########################################################
+	patches.drivers/drm-cirrus-Correct-register-values-for-16bpp
 
 	########################################################
 	# video4linux
