drm/cirrus: Use 16bpp as default (bnc#799216).

--- a/series.conf
+++ b/series.conf
@@ -417,6 +417,7 @@
 	########################################################
 	patches.fixes/drm-i915-TLB-invalidation-with-MI_FLUSH_DW-requires-.patch
 	patches.drivers/drm-cirrus-Correct-register-values-for-16bpp
+	patches.drivers/drm-cirrus-Use-16bpp-as-default
 
 	########################################################
 	# video4linux
