drm/cirrus: Use 16bpp as default (bnc#799216).

--- a/series.conf
+++ b/series.conf
@@ -414,6 +414,7 @@
 	# DRM/Video
 	########################################################
 	patches.drivers/drm-cirrus-Correct-register-values-for-16bpp
+	patches.drivers/drm-cirrus-Use-16bpp-as-default
 
 	########################################################
 	# video4linux
