drm/cirrus: Correct register values for 16bpp (bnc#799216).

--- a/series.conf
+++ b/series.conf
@@ -416,6 +416,7 @@
 	# DRM/Video
 	########################################################
 	patches.fixes/drm-i915-TLB-invalidation-with-MI_FLUSH_DW-requires-.patch
+	patches.drivers/drm-cirrus-Correct-register-values-for-16bpp
 
 	########################################################
 	# video4linux
