- Linux 3.7.6 (bnc#800701). - Update config files. - Delete patches.drivers/alsa-hda-001-Fix-non-snoop-page-handling.

--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-3.7.2-3
 	patches.kernel.org/patch-3.7.3-4
 	patches.kernel.org/patch-3.7.4-5
+	patches.kernel.org/patch-3.7.5-6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -469,7 +470,6 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/alsa-hda-001-Fix-non-snoop-page-handling
 
 	########################################################
 	# Char / serial
