Revert "iwlwifi: fix the reclaimed packet tracking upon flush queue".

--- a/series.conf
+++ b/series.conf
@@ -434,6 +434,7 @@
 	# Wireless Networking
 	########################################################
 	patches.suse/b43-missing-firmware-info.patch
+	patches.fixes/revert-iwlwifi-fix-the-reclaimed-packet-tracking-upon-flush-queue
 
 	########################################################
 	# ISDN
