--- a/series.conf
+++ b/series.conf
@@ -177,6 +177,7 @@
 	patches.suse/readahead-request-tunables.patch
 	patches.fixes/fs-partitions-efi-c-corrupted-guid-partition-tables-can-cause-kernel-oops
 	patches.fixes/mm-Fix-assertion-mapping-nrpages-0-in-end_writeback.patch
+	patches.fixes/quota-autoload-the-quota_v2-module-for-qfmt_vfs_v1-quota-format
 
         ########################################################
         # IPC patches
