--- a/series.conf
+++ b/series.conf
@@ -255,7 +255,8 @@
 	patches.suse/suse-hv-fate314665-0026-Drivers-hv-Implement-flow-management-on-the-send-sid.patch
 	patches.suse/suse-hv-fate314665-0027-Drivers-hv-Capture-the-host-build-information.patch
 	patches.suse/suse-hv-fate314665-0028-Drivers-hv-Cleanup-and-consolidate-reporting-of-buil.patch
-	patches.suse/suse-hv-fate314665-force-win2008.patch
+	patches.suse/suse-hv-fate314665-0029-X86-Handle-Hyper-V-vmbus-interrupts-as-special-hyper.patch
++olh	patches.suse/suse-hv-fate314665-force-win2008.patch
 	patches.suse/suse-hv-Drivers-hv-Execute-shutdown-in-a-thread-context.patch
 	patches.suse/suse-hv-Drivers-scsi-storvsc-Initialize-the-sglist.patch
 	patches.suse/suse-hv-scsi-storvsc-avoid-usage-of-WRITE_SAME.patch
