- Drivers: hv: Bind all vmbus interrupts to the boot CPU   (fate#314665). - Drivers: hv: vmbus: Use the new infrastructure for delivering   VMBUS interrupts (fate#314665). - Delete patches.suse/suse-hv-fate314665-force-win2008.patch.

--- a/series.conf
+++ b/series.conf
@@ -256,7 +256,8 @@
 	patches.suse/suse-hv-fate314665-0027-Drivers-hv-Capture-the-host-build-information.patch
 	patches.suse/suse-hv-fate314665-0028-Drivers-hv-Cleanup-and-consolidate-reporting-of-buil.patch
 	patches.suse/suse-hv-fate314665-0029-X86-Handle-Hyper-V-vmbus-interrupts-as-special-hyper.patch
-+olh	patches.suse/suse-hv-fate314665-force-win2008.patch
+	patches.suse/suse-hv-fate314665-0030-Drivers-hv-Bind-all-vmbbus-interrupts-to-the-boot-CP.patch
+	patches.suse/suse-hv-fate314665-0031-Drivers-hv-vmbus-Use-the-new-infrastructure-for-deli.patch
 	patches.suse/suse-hv-Drivers-hv-Execute-shutdown-in-a-thread-context.patch
 	patches.suse/suse-hv-Drivers-scsi-storvsc-Initialize-the-sglist.patch
 	patches.suse/suse-hv-scsi-storvsc-avoid-usage-of-WRITE_SAME.patch
