--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -44,7 +44,7 @@
 
 # Define some CONFIG variables as rpm macros as well. (rpm cannot handle
 # defining them all at once.)
-%define config_vars CONFIG_MODULES CONFIG_KMSG_IDS CONFIG_SPLIT_PACKAGE CONFIG_ENTERPRISE_SUPPORT
+%define config_vars CONFIG_MODULES CONFIG_KMSG_IDS CONFIG_SPLIT_PACKAGE CONFIG_ENTERPRISE_SUPPORT CONFIG_EFI_STUB
 %{expand:%(eval "$(test -n "%cpu_arch_flavor" && tar -xjf %_sourcedir/config.tar.bz2 --to-stdout config/%cpu_arch_flavor)"; for config in %config_vars; do echo "%%global $config ${!config:-n}"; done)}
 %define split_base (%CONFIG_SPLIT_PACKAGE == "y")
 %define split_extra (%CONFIG_SPLIT_PACKAGE == "y" && %CONFIG_ENTERPRISE_SUPPORT == "y")
@@ -64,6 +64,8 @@ Group:          System/Kernel
 Url:            http://www.kernel.org/
 BuildRequires:  coreutils module-init-tools sparse
 BuildRequires:  fdupes
+# Used to sign the kernel in the buildservice
+BuildRequires:  pesign-obs-integration
 Provides:       multiversion(kernel)
 Provides:       %{name}_%_target_cpu = %version-%release
 Provides:       %name = %version-%source_rel
@@ -333,6 +335,11 @@ while true; do
 done
 
 %install
+
+%if %CONFIG_EFI_STUB == "y"
+# sign the kernel in the buildservice
+export BRP_PESIGN_FILES="/boot/vmlinuz-%kernelrelease-%build_flavor"
+%endif
 
 # get rid of /usr/lib/rpm/brp-strip-debug
 # strip removes too much from the vmlinux ELF binary
