rpm/kernel-binary.spec.in: Add needssslcertforbuild, so that the project certificate is available when signing the kernel.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -16,6 +16,8 @@
 #
 
 # norootforbuild
+# This makes the OBS store the project cert as %_sourcedir/_projectcert.crt
+# needssslcertforbuild
 
 %define srcversion @SRCVERSION@
 %define patchversion @PATCHVERSION@
