rpm/kernel-binary.spec.in: Only sign the x86_64 kernels

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -340,7 +340,11 @@ done
 
 %if %CONFIG_EFI_STUB == "y"
 # sign the kernel in the buildservice
+%ifarch x86_64
+# XXX: only do it on x86_64, as the repackaging changes kernel-pae
+# from i686 to i586
 export BRP_PESIGN_FILES="/boot/vmlinuz-%kernelrelease-%build_flavor"
+%endif
 %endif
 
 # get rid of /usr/lib/rpm/brp-strip-debug
