- Linux 3.7.8. - Delete   patches.fixes/revert-iwlwifi-fix-the-reclaimed-packet-tracking-upon-flush-queue.

--- a/series.conf
+++ b/series.conf
@@ -34,6 +34,7 @@
 	patches.kernel.org/patch-3.7.4-5
 	patches.kernel.org/patch-3.7.5-6
 	patches.kernel.org/patch-3.7.6-7
+	patches.kernel.org/patch-3.7.7-8
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -438,7 +439,6 @@
 	# Wireless Networking
 	########################################################
 	patches.suse/b43-missing-firmware-info.patch
-	patches.fixes/revert-iwlwifi-fix-the-reclaimed-packet-tracking-upon-flush-queue
 
 	########################################################
 	# ISDN
