--- a/series.conf
+++ b/series.conf
@@ -264,6 +264,7 @@
 	patches.suse/suse-hv-Drivers-hv-Execute-shutdown-in-a-thread-context.patch
 	patches.suse/suse-hv-Drivers-scsi-storvsc-Initialize-the-sglist.patch
 	patches.suse/suse-hv-scsi-storvsc-avoid-usage-of-WRITE_SAME.patch
+	patches.suse/suse-hv-synthetic-video.patch
 
         ########################################################
         # Networking, IPv6
