--- a/series.conf
+++ b/series.conf
@@ -35,6 +35,7 @@
 	patches.kernel.org/patch-3.7.5-6
 	patches.kernel.org/patch-3.7.6-7
 	patches.kernel.org/patch-3.7.7-8
+	patches.kernel.org/patch-3.7.8-9
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
