drm/nouveau/vm: fix memory corruption when pgt allocation fails (bnc#802347).

--- a/series.conf
+++ b/series.conf
@@ -232,6 +232,7 @@
 	########################################################
 	# AGP, graphics related stuff
 	########################################################
+	patches.fixes/drm-nouveau-vm-fix-memory-corruption-when-pgt-alloca.patch
 
 	########################################################
 	# Suse specific stuff
