--- a/series.conf
+++ b/series.conf
@@ -449,6 +449,7 @@
 	########################################################
 	# USB
 	########################################################
+	patches.fixes/revert-USB-EHCI-remove-ASS-PSS-polling-timeout.patch
 
 	########################################################
 	# I2C
