- update Xen patches to 3.8 final and c/s 1224 - add symbols to hypercall stubs

--- a/series.conf
+++ b/series.conf
@@ -657,9 +657,7 @@
 	patches.xen/xen3-patch-3.5
 	patches.xen/xen3-patch-3.6
 	patches.xen/xen3-patch-3.7
-	patches.xen/xen3-patch-3.8-rc3
-	patches.xen/xen3-patch-3.8-rc3-rc4
-	patches.xen/xen3-patch-3.8-rc5-rc6
+	patches.xen/xen3-patch-3.8
 
 	# ports of other patches
 	patches.xen/xen3-010-acpi_initrd_override_tables.patch
@@ -667,6 +665,7 @@
 	patches.xen/xen3-x86_64-unwind-annotations
 
 	# bugfixes and enhancements
+	patches.xen/xen-hypercall-symbols
 	patches.xen/xen-sys-suspend
 	patches.xen/xen-ipi-per-cpu-irq
 	patches.xen/xen-virq-per-cpu-irq
