Drivers: hv: vmbus: Handle channel rescind message correctly (fate#314665).

--- a/series.conf
+++ b/series.conf
@@ -260,6 +260,7 @@
 	patches.suse/suse-hv-fate314665-0029-X86-Handle-Hyper-V-vmbus-interrupts-as-special-hyper.patch
 	patches.suse/suse-hv-fate314665-0030-Drivers-hv-Bind-all-vmbbus-interrupts-to-the-boot-CP.patch
 	patches.suse/suse-hv-fate314665-0031-Drivers-hv-vmbus-Use-the-new-infrastructure-for-deli.patch
+	patches.suse/suse-hv-fate314665-0032-Drivers-hv-vmbus-Handle-channel-rescind-message-corr.patch
 	patches.suse/suse-hv-Drivers-hv-Execute-shutdown-in-a-thread-context.patch
 	patches.suse/suse-hv-Drivers-scsi-storvsc-Initialize-the-sglist.patch
 	patches.suse/suse-hv-scsi-storvsc-avoid-usage-of-WRITE_SAME.patch
