--- a/series.conf
+++ b/series.conf
@@ -229,6 +229,7 @@
 	patches.suse/suse-hv-fate314663-0005-Drivers-hv-balloon-Make-adjustments-to-the-pressure-.patch
 	patches.suse/suse-hv-fate314663-0006-Drivers-hv-balloon-Add-a-parameter-to-delay-pressure.patch
 	patches.suse/suse-hv-fate314663-0007-Drivers-hv-balloon-Prevent-the-host-from-ballooning-.patch
+	patches.suse/suse-hv-fate314663-0008-Drivers-hv-balloon-Execute-balloon-inflation-in-a-se.patch
 	patches.suse/suse-hv-fate314665-0001-Drivers-hv-Implement-routines-for-read-side-signalin.patch
 	patches.suse/suse-hv-fate314665-0002-Drivers-hv-Add-state-to-manage-batched-reading.patch
 	patches.suse/suse-hv-fate314665-0003-Drivers-hv-Turn-off-batched-reading-for-util-drivers.patch
