Copy packaging changes from master to the packaging branch

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -82,10 +82,13 @@ Requires(post): module-init-tools >= 3.4
 # packages to install/update. Likewise, this is true for mkinitrd.
 # Need a perl-Bootloader with /usr/lib/bootloader/bootloader_entry
 Requires(post): perl-Bootloader >= 0.4.15
-Requires(post): mkinitrd
+Requires(post): mkinitrd >= 2.7.1
+# Install the package providing /etc/SuSE-release early enough, so that
+# the grub entry has correct title (bnc#757565)
+Requires(post): distribution-release
 # Do not install p-b and mkinitrd for the install check, the %post script is
 # able to handle this
-#!BuildIgnore: perl-Bootloader mkinitrd
+#!BuildIgnore: perl-Bootloader mkinitrd distribution-release
 # Remove some packages that are installed automatically by the build system,
 # but are not needed to build the kernel
 #!BuildIgnore: autoconf automake gettext-runtime libtool cvs gettext-tools m4 udev insserv
@@ -153,49 +156,30 @@ BuildArch:      i686
 # The following KMPs have been integrated into the kernel package,
 # grouped by the last product that contained them.
 # sles10 / 10.3
-Obsoletes:      iwlwifi-kmp-%build_flavor < %version
-Provides:       iwlwifi-kmp-%build_flavor = %version
-Obsoletes:      ipw3945-kmp-%build_flavor < %version
-Provides:       ipw3945-kmp-%build_flavor = %version
+Obsoletes:      iwlwifi-kmp-%build_flavor
+Obsoletes:      ipw3945-kmp-%build_flavor
 # sles10 / 11.0
-Obsoletes:      uvcvideo-kmp-%build_flavor < %version
-Provides:      uvcvideo-kmp-%build_flavor = %version
+Obsoletes:      uvcvideo-kmp-%build_flavor
 # 11.0
-Obsoletes:      atl2-kmp-%build_flavor < %version
-Provides:       atl2-kmp-%build_flavor = %version
-Obsoletes:      at76_usb-kmp-%build_flavor < %version
-Provides:       at76_usb-kmp-%build_flavor = %version
-Obsoletes:      btusb-kmp-%build_flavor < %version
-Provides:       btusb-kmp-%build_flavor = %version
-Obsoletes:      et131x-kmp-%build_flavor < %version
-Provides:       et131x-kmp-%build_flavor = %version
-Obsoletes:      ivtv-kmp-%build_flavor < %version
-Provides:       ivtv-kmp-%build_flavor = %version
-Obsoletes:      pcc-acpi-kmp-%build_flavor < %version
-Provides:       pcc-acpi-kmp-%build_flavor = %version
-Obsoletes:      wlan-ng-kmp-%build_flavor < %version
-Provides:       wlan-ng-kmp-%build_flavor = %version
+Obsoletes:      atl2-kmp-%build_flavor
+Obsoletes:      wlan-ng-kmp-%build_flavor
+Obsoletes:      et131x-kmp-%build_flavor
+Obsoletes:      ivtv-kmp-%build_flavor
+Obsoletes:      at76_usb-kmp-%build_flavor
+Obsoletes:      pcc-acpi-kmp-%build_flavor
+Obsoletes:      btusb-kmp-%build_flavor
 # sle11-ga
-Obsoletes:      brocade-bfa-kmp-%build_flavor < %version
-Provides:       brocade-bfa-kmp-%build_flavor = %version
-Obsoletes:      enic-kmp-%build_flavor < %version
-Provides:       enic-kmp-%build_flavor = %version
-Obsoletes:      fnic-kmp-%build_flavor < %version
-Provides:       fnic-kmp-%build_flavor = %version
-Obsoletes:      iwlagn-2-6-27-kmp-%build_flavor < %version
-Provides:       iwlagn-2-6-27-kmp-%build_flavor = %version
-Obsoletes:      kvm-kmp-%build_flavor < %version
-Provides:       kvm-kmp-%build_flavor = %version
-Obsoletes:      msi-wmi-kmp-%build_flavor < %version
-Provides:       msi-wmi-kmp-%build_flavor = %version
-Obsoletes:      perfmon-kmp-%build_flavor < %version
-Provides:       perfmon-kmp-%build_flavor = %version
+Obsoletes:      enic-kmp-%build_flavor
+Obsoletes:      fnic-kmp-%build_flavor
+Obsoletes:      brocade-bfa-kmp-%build_flavor
+Obsoletes:      kvm-kmp-%build_flavor
+Obsoletes:      perfmon-kmp-%build_flavor
+Obsoletes:      iwlagn-2-6-27-kmp-%build_flavor
+Obsoletes:      msi-wmi-kmp-%build_flavor
 # sle11
-Obsoletes:      ocfs2-kmp-%build_flavor < %version
-Provides:       ocfs2-kmp-%build_flavor = %version
+Obsoletes:      ocfs2-kmp-%build_flavor
 # 11.1
 Obsoletes:      quickcam-kmp-%build_flavor < 0.6.7
-Provides:       quickcam-kmp-%build_flavor = 0.6.7
 
 # Provide the exported symbols as "ksym(symbol) = hash"
 %define __find_provides %_sourcedir/find-provides %name
@@ -414,10 +398,9 @@ add_vmlinux()
 # architecture specifics
 %ifarch %ix86 x86_64
     add_vmlinux --compressed
-%if %build_xen
-    image=vmlinuz
-%else
     image=bzImage
+%if %build_xen
+    test -f arch/x86/boot/$image || image=vmlinuz
 %endif
     cp -p arch/x86/boot/$image %buildroot/boot/vmlinuz-%kernelrelease-%build_flavor
     image=vmlinuz
@@ -459,10 +442,17 @@ add_vmlinux()
 %endif
 %ifarch %arm
     add_vmlinux --compressed
-    # quickly compile uImage so we have something to boot from
-    make %{?_smp_mflags} uImage $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y
-    image=uImage
-    cp -p arch/arm/boot/$image %buildroot/boot/uImage-%kernelrelease-%build_flavor
+    case "%build_flavor" in
+    default)
+        image=zImage
+        ;;
+    *)
+        # quickly compile uImage so we have something to boot from
+        make %{?_smp_mflags} uImage $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y
+        image=uImage
+        ;;
+    esac
+    cp -p arch/arm/boot/$image %buildroot/boot/$image-%kernelrelease-%build_flavor
 %endif
 
 # end of build_kdump
@@ -619,6 +609,12 @@ if [ %CONFIG_MODULES = y ]; then
 	fi
     fi
 
+    # arch/powerpc/lib/crtsavres.o is required for building external
+    # modules on powerpc
+    if [ -f %kernel_build_dir/arch/powerpc/lib/crtsavres.o ]; then
+	echo arch/powerpc/lib/crtsavres.o >> %my_builddir/obj-files
+    fi
+
     tar -cf - -T %my_builddir/obj-files | \
 	tar -xf - -C %rpm_install_dir/%cpu_arch_flavor
     # bnc#507084
@@ -667,8 +663,8 @@ done
 
     # Add the auto-generated (by mkdumprd) kdump initrd to %ghost so that
     # the file gets removed when uninstalling the kernel.
-    echo '%%ghost /boot/initrd-%kernelrelease-kdump'
-    touch $RPM_BUILD_ROOT/boot/initrd-%kernelrelease-kdump
+    echo '%%ghost /boot/initrd-%kernelrelease-%build_flavor-kdump'
+    touch $RPM_BUILD_ROOT/boot/initrd-%kernelrelease-%build_flavor-kdump
 
     if [ %CONFIG_MODULES = y ]; then
 	find lib/modules/%kernelrelease-%build_flavor \
