rpm/kernel-binary.spec.in: 'bc' is required since v3.9-rc1

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -62,7 +62,7 @@ Release:        @RELEASE@
 License:        GPL-2.0
 Group:          System/Kernel
 Url:            http://www.kernel.org/
-BuildRequires:  coreutils module-init-tools sparse
+BuildRequires:  coreutils module-init-tools sparse bc
 BuildRequires:  fdupes
 Provides:       multiversion(kernel)
 Provides:       %{name}_%_target_cpu = %version-%release
