- Linux 3.8.1. - Refresh patches.xen/xen3-patch-2.6.31. - Delete   patches.suse/suse-hv-register-clocksource-only-if-its-adverti.patch.

--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/patch-3.8.1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -224,7 +225,6 @@
 	########################################################
 	# Suse specific stuff
 	########################################################
-	patches.suse/suse-hv-register-clocksource-only-if-its-adverti.patch
 	patches.suse/suse-hv-X86-Add-a-check-to-catch-Xen-emulation-of-Hyper-V.patch
 	patches.suse/suse-hv-fate314663-0005-Drivers-hv-balloon-Make-adjustments-to-the-pressure-.patch
 	patches.suse/suse-hv-fate314663-0006-Drivers-hv-balloon-Add-a-parameter-to-delay-pressure.patch
