PCI/PM: Clear state_saved during suspend (bnc#806966).

--- a/series.conf
+++ b/series.conf
@@ -446,6 +446,7 @@
 	########################################################
 	# PCI and PCI hotplug
 	########################################################
+	patches.fixes/PCI-PM-Clear-state_saved-during-suspend.patch
 
 	########################################################
 	# sysfs / driver core
