Fix broken VT1 output with mgadrmfb (bnc#806990).

--- a/series.conf
+++ b/series.conf
@@ -465,6 +465,7 @@
 	# Input & Console
 	########################################################
 	patches.suse/SUSE-bootsplash
+	patches.suse/SUSE-bootsplash-mgadrmfb-workaround
 	patches.drivers/elousb.patch
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 
