gpio-ich: Fix ichx_gpio_check_available() return what callers expect.
Conflicts:
	series.conf

--- a/series.conf
+++ b/series.conf
@@ -481,6 +481,7 @@
 	# Other driver fixes
 	########################################################
 	patches.fixes/parport-mutex
+	patches.fixes/gpio-ich-fix-ichx_gpio_check_available-return.patch
 
 	# Needs updating WRT d27769ec (block: add GENHD_FL_NO_PART_SCAN)
 +hare	patches.suse/no-partition-scan
