- Update Xen patches to 3.8.2 and c/s 1226.

--- a/series.conf
+++ b/series.conf
@@ -664,6 +664,7 @@
 	patches.xen/xen3-patch-3.6
 	patches.xen/xen3-patch-3.7
 	patches.xen/xen3-patch-3.8
+	patches.xen/xen3-patch-3.8.1-2
 
 	# ports of other patches
 	patches.xen/xen3-010-acpi_initrd_override_tables.patch
