rpm/kernel-binary.spec.in: Do not require new mkinitrd in kernel-vanilla

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -86,7 +86,12 @@ Requires(post): module-init-tools >= 3.4
 # packages to install/update. Likewise, this is true for mkinitrd.
 # Need a perl-Bootloader with /usr/lib/bootloader/bootloader_entry
 Requires(post): perl-Bootloader >= 0.4.15
+%if %build_vanilla
+Requires(post): mkinitrd
+%else
+# Require a mkinitrd that can handle usbhid/hid-generic built-in (bnc#773559)
 Requires(post): mkinitrd >= 2.7.1
+%endif
 # Install the package providing /etc/SuSE-release early enough, so that
 # the grub entry has correct title (bnc#757565)
 Requires(post): distribution-release
