supported.conf: add drivers/s390/block/scm_block    (fate#314095, bnc#807237)

--- a/supported.conf
+++ b/supported.conf
@@ -1641,6 +1641,7 @@
 		kernel/drivers/s390/block/dasd_fba_mod
 		kernel/drivers/s390/block/dasd_mod
 		kernel/drivers/s390/block/dcssblk
+		drivers/s390/block/scm_block
 		kernel/drivers/s390/block/xpram
 		kernel/drivers/s390/char/fs3270
 		kernel/drivers/s390/char/monreader
