--- a/series.conf
+++ b/series.conf
@@ -429,6 +429,7 @@
 	patches.drivers/ehea-modinfo.patch
 	patches.fixes/e1000e-fix-accessing-to-suspended-device.patch
 	patches.fixes/e1000e-fix-pci-device-enable-counter-balance.patch
+	patches.fixes/e1000e-fix-runtime-power-management-transitions.patch
 
 	########################################################
 	# Wireless Networking
