--- a/series.conf
+++ b/series.conf
@@ -427,6 +427,7 @@
 	########################################################
 	patches.fixes/tulip-quad-NIC-ifdown
 	patches.drivers/ehea-modinfo.patch
+	patches.fixes/e1000e-fix-accessing-to-suspended-device.patch
 
 	########################################################
 	# Wireless Networking
