e1000e: fix pci-device enable-counter balance (bnc#806966).

--- a/series.conf
+++ b/series.conf
@@ -428,6 +428,7 @@
 	patches.fixes/tulip-quad-NIC-ifdown
 	patches.drivers/ehea-modinfo.patch
 	patches.fixes/e1000e-fix-accessing-to-suspended-device.patch
+	patches.fixes/e1000e-fix-pci-device-enable-counter-balance.patch
 
 	########################################################
 	# Wireless Networking
