Drivers: hv: balloon: Do not request completion notification (fate#314663).

--- a/series.conf
+++ b/series.conf
@@ -266,6 +266,7 @@
 	patches.suse/suse-hv-Drivers-scsi-storvsc-Initialize-the-sglist.patch
 	patches.suse/suse-hv-scsi-storvsc-avoid-usage-of-WRITE_SAME.patch
 	patches.suse/suse-hv-synthetic-video.patch
+	patches.suse/suse-hv-fate314663-0001-Drivers-hv-balloon-Do-not-request-completion-notific.patch
 
         ########################################################
         # Networking, IPv6
