rpm/kernel-binary.spec.in: Fix sed command with multiple certificates

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -520,7 +520,7 @@ for sub in '-base' '' '-extra'; do
             continue
         esac
         # Copy the respective scriptlet from kernel-cert-subpackage
-        sed "1,/^%%$script / d; /^%%[^%%]/,\$ d; s:@CERTS@:${certs[@]}:g" \
+        sed "1,/^%%$script / d; /^%%[^%%]/,\$ d; s:@CERTS@:${certs[*]}:g" \
             %_sourcedir/kernel-cert-subpackage >>"%my_builddir/$script$sub.sh"
     done
 done
