SMDKV310: Fix compilation.

--- a/series.conf
+++ b/series.conf
@@ -161,6 +161,7 @@
 	patches.arch/arm-omap3isp.patch
 	patches.arch/arm-kvm-iommu.patch
 	patches.arch/arm-fec.patch
+	patches.arch/arm-smdkv310.patch
 
 	########################################################
 	# S/390
