--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-3.8.2-3
 	patches.kernel.org/patch-3.8.3-4
 	patches.kernel.org/patch-3.8.4-5
+	patches.kernel.org/patch-3.8.5-6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
