--- a/config.conf
+++ b/config.conf
@@ -40,6 +40,7 @@
 # ARM architectures
 +armv5tel	armv5tel/versatile
 +armv7hl	armv7hl/default
++armv7hl	armv7hl/lpae
 +armv7hl	armv7hl/cubox
 +armv7hl	armv7hl/exynos
 +arm64		arm64/default
