--- a/series.conf
+++ b/series.conf
@@ -161,6 +161,8 @@
 	patches.arch/arm-kvm-iommu.patch
 	patches.arch/arm-fec.patch
 	patches.arch/arm-smdkv310.patch
+	# Compile fix for Xen on ARM with our Xen patches applied
+	patches.arch/arm-xen-fixup.patch
 
 	########################################################
 	# S/390
