--- a/series.conf
+++ b/series.conf
@@ -162,6 +162,7 @@
 	patches.arch/arm-fec.patch
 	patches.arch/arm-smdkv310.patch
 	patches.arch/arm-exynos-devtree.patch
+	patches.arch/arm-pl330-fix.patch
 	# Compile fix for Xen on ARM with our Xen patches applied
 	patches.arch/arm-xen-fixup.patch
 
