--- a/series.conf
+++ b/series.conf
@@ -163,6 +163,7 @@
 	patches.arch/arm-smdkv310.patch
 	patches.arch/arm-exynos-devtree.patch
 	patches.arch/arm-pl330-fix.patch
+	patches.arch/arm-highbank-cache.patch
 	# Compile fix for Xen on ARM with our Xen patches applied
 	patches.arch/arm-xen-fixup.patch
 
