--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/patch-3.8.3-4
 	patches.kernel.org/patch-3.8.4-5
 	patches.kernel.org/patch-3.8.5-6
+	patches.kernel.org/patch-3.8.6-7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -158,7 +159,6 @@
         # ARM
         ########################################################
 	patches.arch/cubox-configuration.patch
-	patches.arch/arm-fix-build-ux500-module.diff
 	patches.arch/arm-exynos-nosparse.patch
 	patches.arch/arm-origen-regulator.patch
 	patches.arch/arm-OMAP-Fix-missing-cm3xxx.h-include.patch
