input: Export matrix_keypad_parse_of_params().

--- a/series.conf
+++ b/series.conf
@@ -39,4 +39,5 @@
 	########################################################
 	patches.rpmify/firmware-path
 	# build fixes
+	patches.rpmify/0001-input-Export-matrix_keypad_parse_of_params.patch
 
