--- a/series.conf
+++ b/series.conf
@@ -34,6 +34,7 @@
 	patches.kernel.org/patch-3.8.4-5
 	patches.kernel.org/patch-3.8.5-6
 	patches.kernel.org/patch-3.8.6-7
+	patches.kernel.org/patch-3.8.7-8
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
