DT: export of_get_next_parent() for use by modules: fix modular V4L2.

--- a/series.conf
+++ b/series.conf
@@ -39,4 +39,5 @@
 	########################################################
 	patches.rpmify/firmware-path
 	# build fixes
+	patches.rpmify/DT-export-of_get_next_parent-for-use-by-modules-fix-modular-V4L2.patch
 
