efi: Distinguish between "remaining space" and actually used space (bnc#815170).

--- a/series.conf
+++ b/series.conf
@@ -495,6 +495,7 @@
 	patches.fixes/efi-02-Move-utf16-functions-to-kernel-core-and-rename.patch
 	patches.fixes/efi-03-efi-Pass-boot-services-variable-info-to-runtime-code.patch
 	patches.fixes/efi-04-x86-efi-Check-max_size-only-if-it-is-non-zero.patch
+	patches.fixes/efi-05-efi-Distinguish-between-remaining-space-and-actually.patch
 
 	########################################################
 	# Other drivers we have added to the tree
