Move utf16 functions to kernel core and rename (bnc#815170).

--- a/series.conf
+++ b/series.conf
@@ -492,6 +492,7 @@
 	# Needs updating WRT d27769ec (block: add GENHD_FL_NO_PART_SCAN)
 +hare	patches.suse/no-partition-scan
 	patches.fixes/efi-01-x86-efivars-firmware-bug-workarounds-should-be-in-pl.patch
+	patches.fixes/efi-02-Move-utf16-functions-to-kernel-core-and-rename.patch
 
 	########################################################
 	# Other drivers we have added to the tree
