--- a/series.conf
+++ b/series.conf
@@ -493,6 +493,7 @@
 +hare	patches.suse/no-partition-scan
 	patches.fixes/efi-01-x86-efivars-firmware-bug-workarounds-should-be-in-pl.patch
 	patches.fixes/efi-02-Move-utf16-functions-to-kernel-core-and-rename.patch
+	patches.fixes/efi-03-efi-Pass-boot-services-variable-info-to-runtime-code.patch
 
 	########################################################
 	# Other drivers we have added to the tree
