--- a/series.conf
+++ b/series.conf
@@ -491,6 +491,7 @@
 
 	# Needs updating WRT d27769ec (block: add GENHD_FL_NO_PART_SCAN)
 +hare	patches.suse/no-partition-scan
+	patches.fixes/efi-01-x86-efivars-firmware-bug-workarounds-should-be-in-pl.patch
 
 	########################################################
 	# Other drivers we have added to the tree
