x86,efi: Check max_size only if it is non-zero (bnc#815170).

--- a/series.conf
+++ b/series.conf
@@ -494,6 +494,7 @@
 	patches.fixes/efi-01-x86-efivars-firmware-bug-workarounds-should-be-in-pl.patch
 	patches.fixes/efi-02-Move-utf16-functions-to-kernel-core-and-rename.patch
 	patches.fixes/efi-03-efi-Pass-boot-services-variable-info-to-runtime-code.patch
+	patches.fixes/efi-04-x86-efi-Check-max_size-only-if-it-is-non-zero.patch
 
 	########################################################
 	# Other drivers we have added to the tree
