--- a/series.conf
+++ b/series.conf
@@ -496,6 +496,7 @@
 	patches.fixes/efi-03-efi-Pass-boot-services-variable-info-to-runtime-code.patch
 	patches.fixes/efi-04-x86-efi-Check-max_size-only-if-it-is-non-zero.patch
 	patches.fixes/efi-05-efi-Distinguish-between-remaining-space-and-actually.patch
+	patches.fixes/efi-06-x86-efi-Implement-efi_no_storage_paranoia-parameter.patch
 
 	########################################################
 	# Other drivers we have added to the tree
