- x86/Kconfig: Make EFI select UCS2_STRING (bnc#815170). - Refresh patches.xen/xen-x86-EFI. - Refresh patches.xen/xen3-auto-xen-kconfig.diff.

--- a/series.conf
+++ b/series.conf
@@ -497,6 +497,7 @@
 	patches.fixes/efi-04-x86-efi-Check-max_size-only-if-it-is-non-zero.patch
 	patches.fixes/efi-05-efi-Distinguish-between-remaining-space-and-actually.patch
 	patches.fixes/efi-06-x86-efi-Implement-efi_no_storage_paranoia-parameter.patch
+	patches.fixes/efi-07-x86-Kconfig-Make-EFI-select-UCS2_STRING.patch
 
 	########################################################
 	# Other drivers we have added to the tree
