efi: Export efi_query_variable_store() for efivars.ko (bnc#815170).

--- a/series.conf
+++ b/series.conf
@@ -498,6 +498,7 @@
 	patches.fixes/efi-05-efi-Distinguish-between-remaining-space-and-actually.patch
 	patches.fixes/efi-06-x86-efi-Implement-efi_no_storage_paranoia-parameter.patch
 	patches.fixes/efi-07-x86-Kconfig-Make-EFI-select-UCS2_STRING.patch
+	patches.fixes/efi-08-Export-efi_query_variable_store-for-efivars.ko.patch
 
 	########################################################
 	# Other drivers we have added to the tree
