--- a/series.conf
+++ b/series.conf
@@ -39,4 +39,5 @@
 	########################################################
 	patches.rpmify/firmware-path
 	# build fixes
+	patches.rpmify/0001-Revert-kconfig-fix-randomising-choice-entries-in-pre.patch
 
