TTY: fix atime/mtime regression (bnc#815745).

--- a/series.conf
+++ b/series.conf
@@ -483,6 +483,7 @@
 	# Char / serial
 	########################################################
 	patches.fixes/TTY-do-not-update-atime-mtime-on-read-write.patch
+	patches.fixes/TTY-fix-atime-mtime-regression.patch
 
 	########################################################
 	# Other driver fixes
