Fix highbank sata proc_name.

--- a/series.conf
+++ b/series.conf
@@ -164,6 +164,7 @@
 	patches.arch/arm-highbank-cpuidle.patch
 	# Compile fix for Xen on ARM with our Xen patches applied
 	patches.arch/arm-xen-fixup.patch
+	patches.arch/arm-highbank-sata.patch
 
 	########################################################
 	# S/390
