rpm/kernel-spec-macros: Drop the %release_num macro
We no longer put the -rcX tag into the release string.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -267,7 +267,7 @@ else
 	cp ../config/%cpu_arch_flavor .config
 fi
 %build_src_dir/scripts/config \
-	--set-str CONFIG_LOCALVERSION %release_num-%build_flavor \
+	--set-str CONFIG_LOCALVERSION -%source_rel-%build_flavor \
 	--enable  CONFIG_SUSE_KERNEL \
 %if 0%{?__debug_package:1}
 	--enable  CONFIG_DEBUG_INFO \
