idr: Print a stack dump after ida_remove warning (http://lists.opensuse.org/opensuse-kernel/2013-04/msg00102.html).

--- a/series.conf
+++ b/series.conf
@@ -196,6 +196,7 @@
 	########################################################
 	patches.suse/connector-read-mostly
 	patches.suse/kbd-ignore-gfx.patch
+	patches.suse/ida-remove-warning-dump-stack.patch
 
 	########################################################
 	#
