config.conf: disable s390 support for openSUSE kernels
There is no community project to build openSUSE on s390 so we don't need
to waste resources building the kernel for it.

--- a/config.conf
+++ b/config.conf
@@ -17,10 +17,10 @@
 +i386 		i386/vanilla
 +i386 -syms	i386/trace
 
-+ia64		ia64/default
-+ia64 -syms	ia64/debug
-+ia64		ia64/vanilla
-+ia64 -syms	ia64/trace
+#+ia64		ia64/default
+#+ia64 -syms	ia64/debug
+#+ia64		ia64/vanilla
+#+ia64 -syms	ia64/trace
 
 +x86_64		x86_64/default
 +x86_64		x86_64/desktop
@@ -45,12 +45,12 @@
 +armv7hl	armv7hl/exynos
 +arm64		arm64/default
 
-+s390		s390/s390
-+s390 -syms	s390/trace
-+s390		s390/vanilla
-+s390x		s390x/default
-+s390x -syms	s390x/trace
-+s390x		s390x/vanilla
+#+s390		s390/s390
+#+s390 -syms	s390/trace
+#+s390		s390/vanilla
+#+s390x		s390x/default
+#+s390x -syms	s390x/trace
+#+s390x		s390x/vanilla
 
 # Maintained by jengelh
 # +sparc64	sparc64/default
