- Linux 3.9.1. - Delete patches.arch/arm-highbank-sata.patch.

--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/patch-3.9.1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -164,7 +165,6 @@
 	patches.arch/arm-highbank-cpuidle.patch
 	# Compile fix for Xen on ARM with our Xen patches applied
 	patches.arch/arm-xen-fixup.patch
-	patches.arch/arm-highbank-sata.patch
 
 	########################################################
 	# S/390
