--- a/series.conf
+++ b/series.conf
@@ -17119,6 +17119,9 @@
 	# bsc#1166486
 	patches.suse/nvdimm-disable-namespace-on-error.patch
 
+	# bsc#1184485, bsc#1216776
+	patches.suse/dm_blk_ioctl-implement-path-failover-for-SG_IO.patch
+
 	########################################################
 	# Networking drivers (wired)
 	########################################################
