supported.conf Add TDA4VM-SK modules (jsc#PED-1379)
Signed-off-by: Ivan T. Ivanov <iivanov@suse.de>

--- a/supported.conf
+++ b/supported.conf
@@ -569,6 +569,7 @@
 -		drivers/crypto/omap-sham					# armv7hl
 		drivers/crypto/padlock-aes
 		drivers/crypto/padlock-sha
+		drivers/crypto/sa2ul						# jsc#PED-1379
 +external	drivers/crypto/qat/qat_4xxx/qat_4xxx				#Intel
 +external	drivers/crypto/qat/qat_c3xxx/qat_c3xxx				#Intel
 +external	drivers/crypto/qat/qat_c3xxxvf/qat_c3xxxvf			#Intel
@@ -737,7 +738,7 @@
 		drivers/firmware/scpi_pm_domain
 -		drivers/firmware/stratix10-rsu
 -		drivers/firmware/stratix10-svc
--		drivers/firmware/ti_sci						# armv7hl
+		drivers/firmware/ti_sci						# armv7hl / jsc#PED-1379
 -		drivers/firmware/turris-mox-rwtm
 -		drivers/fpga/altera-cvp
 -		drivers/fpga/altera-fpga2sdram					# armv7hl
@@ -938,7 +939,7 @@
 		drivers/gpu/drm/scheduler/gpu-sched
 -!optional	drivers/gpu/drm/sun4i/*
 		drivers/gpu/drm/tegra/tegra-drm
--		drivers/gpu/drm/tidss/tidss					# armv7hl
+		drivers/gpu/drm/tidss/tidss					# jsc#PED-1379
 -		drivers/gpu/drm/tilcdc/tilcdc					# armv7hl
 		drivers/gpu/drm/tiny/simpledrm
 -		drivers/gpu/drm/tiny/*
@@ -1122,6 +1123,7 @@
 		drivers/hwmon/smsc47b397
 		drivers/hwmon/w83627ehf
 -		drivers/hwmon/*
+		drivers/hwspinlock/omap_hwspinlock				# jsc#PED-1379
 		drivers/hwspinlock/qcom_hwspinlock
 -		drivers/hwspinlock/sprd_hwspinlock
 -		drivers/hwspinlock/sun6i_hwspinlock
@@ -1203,6 +1205,7 @@
 -!optional	drivers/i2c/busses/i2c-npcm7xx					# armv7hl
 -		drivers/i2c/busses/i2c-nvidia-gpu
 -!optional	drivers/i2c/busses/i2c-ocores
+		drivers/i2c/busses/i2c-omap					# jsc#PED-1379
 +external	drivers/i2c/busses/i2c-opal					# supported by IBM
 -		drivers/i2c/busses/i2c-owl
 		drivers/i2c/busses/i2c-parport					# I2C bus over parallel port
@@ -2542,7 +2545,7 @@
 		drivers/mmc/host/sdhci-st					# armv7hl
 		drivers/mmc/host/sdhci-tegra
 		drivers/mmc/host/sdhci-xenon-driver
--		drivers/mmc/host/sdhci_am654
+		drivers/mmc/host/sdhci_am654					# jsc#PED-1379
 -		drivers/mmc/host/sdhci_f_sdh30
 -!optional	drivers/mmc/host/sdricoh_cs
 -		drivers/mmc/host/sunxi-mmc
@@ -2581,7 +2584,7 @@
 -		drivers/mtd/*
 -		drivers/mux/mux-adg792a
 -		drivers/mux/mux-adgs1408
--		drivers/mux/mux-core
+		drivers/mux/mux-core						# Needed by phy-am654-serdes (jsc#PED-1379)
 -		drivers/mux/mux-gpio
 -		drivers/mux/mux-mmio
 		drivers/net/bareudp
@@ -2842,10 +2845,12 @@
 -!optional	drivers/net/ethernet/sun/sunhme
 		drivers/net/ethernet/synopsys/dwc-xlgmac
 		drivers/net/ethernet/tehuti/tehuti
+		drivers/net/ethernet/ti/am65-cpts				# jsc#PED-1379
 		drivers/net/ethernet/ti/cpsw-common				# armv7hl
-		drivers/net/ethernet/ti/davinci_mdio				# armv7hl
+		drivers/net/ethernet/ti/davinci_mdio				# armv7hl / jsc#PED-1379
 -		drivers/net/ethernet/ti/keystone_netcp				# armv7hl
 -		drivers/net/ethernet/ti/keystone_netcp_ethss			# armv7hl
+		drivers/net/ethernet/ti/ti-am65-cpsw-nuss			# jsc#PED-1379
 		drivers/net/ethernet/ti/ti_cpsw					# armv7hl
 		drivers/net/ethernet/ti/ti_cpsw_new				# armv7hl
 		drivers/net/ethernet/ti/ti_davinci_emac				# armv7hl
@@ -3302,8 +3307,8 @@
 -		drivers/phy/cadence/cdns-dphy
 -		drivers/phy/cadence/phy-cadence-dp
 -		drivers/phy/cadence/phy-cadence-salvo
--		drivers/phy/cadence/phy-cadence-sierra
--		drivers/phy/cadence/phy-cadence-torrent
+		drivers/phy/cadence/phy-cadence-sierra				# jsc#PED-1379
+		drivers/phy/cadence/phy-cadence-torrent				# jsc#PED-1379
 -		drivers/phy/freescale/phy-fsl-imx8-mipi-dphy
 		drivers/phy/freescale/phy-fsl-imx8mq-usb			# bsc#1199909
 -		drivers/phy/hisilicon/phy-hi3660-usb3
@@ -3370,8 +3375,10 @@
 		drivers/phy/st/phy-stih407-usb					# armv7hl
 		drivers/phy/tegra/phy-tegra-xusb
 		drivers/phy/tegra/phy-tegra194-p2u
+		drivers/phy/ti/phy-am654-serdes					# jsc#PED-1379
 		drivers/phy/ti/phy-dm816x-usb					# armv7hl
 		drivers/phy/ti/phy-gmii-sel					# armv7hl
+		drivers/phy/ti/phy-j721e-wiz					# jsc#PED-1379
 		drivers/phy/ti/phy-omap-control					# armv7hl
 		drivers/phy/ti/phy-omap-usb2					# armv7hl
 		drivers/phy/ti/phy-ti-pipe3					# armv7hl
@@ -3726,8 +3733,8 @@
 -		drivers/reset/reset-qcom-pdc
 		drivers/reset/reset-raspberrypi
 -		drivers/reset/reset-scmi
--		drivers/reset/reset-ti-sci					# armv7hl
--		drivers/reset/reset-ti-syscon
+		drivers/reset/reset-ti-sci					# jsc#PED-1379
+		drivers/reset/reset-ti-syscon					# jsc#PED-1379
 -		drivers/rpmsg/mtk_rpmsg
 		drivers/rpmsg/qcom_glink
 		drivers/rpmsg/qcom_glink_native
@@ -3938,6 +3945,7 @@
 		drivers/scsi/stex						# SCSI Tape Driver fate#303913
 +base		drivers/scsi/sym53c8xx_2/sym53c8xx
 -		drivers/scsi/ufs/cdns-pltfrm
+		drivers/scsi/ufs/ti-j721e-ufs					# jsc#PED-1379
 -		drivers/scsi/ufs/ufs-exynos
 		drivers/scsi/ufs/ufs-hisi
 		drivers/scsi/ufs/ufs-mediatek
@@ -3965,8 +3973,8 @@
 		drivers/soc/qcom/*
 -		drivers/soc/ti/knav_dma						# armv7hl
 -		drivers/soc/ti/knav_qmss					# armv7hl
--!optional	drivers/soc/ti/pruss						# armv7hl
--		drivers/soc/ti/ti_sci_pm_domains				# armv7hl
+		drivers/soc/ti/pruss						# jsc#PED-1379
+		drivers/soc/ti/ti_sci_pm_domains				# jsc#PED-1379
 -		drivers/soc/xilinx/xlnx_vcu
 		drivers/soundwire/soundwire-bus
 		drivers/soundwire/soundwire-cadence
@@ -4230,6 +4238,7 @@
 -		drivers/thermal/intel/intel_soc_dts_thermal
 -		drivers/thermal/intel/intel_tcc_cooling
 		drivers/thermal/intel/x86_pkg_temp_thermal
+		drivers/thermal/k3_bandgap					# jsc#PED-1379
 -		drivers/thermal/khadas_mcu_fan
 		drivers/thermal/max77620_thermal
 -		drivers/thermal/mtk_thermal
@@ -4306,7 +4315,7 @@
 		drivers/usb/atm/usbatm						# Generic USB xDSL driver core
 -		drivers/usb/atm/xusbatm						# dumb usbatm-based driver for modems initialized in userspace
 -!optional	drivers/usb/c67x00/c67x00
--!optional	drivers/usb/cdns3/*
+		drivers/usb/cdns3/*						# jsc#PED-1379
 +base		drivers/usb/chipidea/ci_hdrc					# bsc#1185010
 +base		drivers/usb/chipidea/ci_hdrc_imx				# bsc#1185010
 -!optional	drivers/usb/chipidea/ci_hdrc_msm				# armv7hl
@@ -4769,6 +4778,7 @@
 -		drivers/watchdog/pretimeout_panic
 -!optional	drivers/watchdog/qcom-wdt					# armv7hl
 -!optional	drivers/watchdog/rn5t618_wdt					# armv7hl
+		drivers/watchdog/rti_wdt					# jsc#PED-1379
 -		drivers/watchdog/s3c2410_wdt
 		drivers/watchdog/sbc60xxwdt					# 60xx Single Board Computer Watchdog Timer driver
 -		drivers/watchdog/sbc_epx_c3					# A Hardware Watchdog Device for the Winsystems EPX-C3 single board computer
