--- a/series.conf
+++ b/series.conf
@@ -10187,6 +10187,7 @@
 	patches.suse/crypto-ccree-Fix-use-after-free-in-cc_cipher_exit.patch
 	patches.suse/crypto-qat-disable-registration-of-algorithms.patch
 	patches.suse/hwrng-nomadik-Change-clk_disable-to-clk_disable_unpr.patch
+	patches.suse/io_uring-terminate-manual-loop-iterator-loop-correct.patch
 	patches.suse/blk-cgroup-set-blkg-iostat-after-percpu-stat-aggrega.patch
 	patches.suse/block-update-io_ticks-when-io-hang.patch
 	patches.suse/block-don-t-delete-queue-kobject-before-its-children.patch
