io_uring: add a schedule point in io_add_buffers() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9709,6 +9709,7 @@
 	patches.suse/hwmon-pmbus-Clear-pmbus-fault-warning-bits-after-rea.patch
 	patches.suse/of-unittest-update-text-of-expected-warnings.patch
 	patches.suse/surface-surface3_power-Fix-battery-readings-on-batte.patch
+	patches.suse/io_uring-add-a-schedule-point-in-io_add_buffers.patch
 	patches.suse/nvme-don-t-return-an-error-from-nvme_configure_metad.patch
 	patches.suse/nvme-also-mark-passthrough-only-namespaces-ready-in-.patch
 	patches.suse/bpf-Fix-crash-due-to-out-of-bounds-access-into-reg2b.patch
