kernel-binary.spec.in: clean up %endif

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -1391,7 +1391,7 @@ Requires(post): suse-module-tools >= 12.4
 %files -n @KMP_NAME@-%build_flavor -f @KMP_NAME@.files
 %defattr(-, root, root)
 # END KMP
-%endif # %CONFIG_SUSE_KERNEL_SUPPORTED
-%endif # %CONFIG_MODULES
+%endif
+%endif
 
 %changelog
