--- a/series.conf
+++ b/series.conf
@@ -5171,6 +5171,7 @@
 	patches.suse/net-mlx5e-check-return-value-of-rhashtable_init.patch
 	patches.suse/octeontx2-af-Reset-PTP-config-in-FLR-handler.patch
 	patches.suse/octeontx2-af-cn10k-RPM-hardware-timestamp-configurat.patch
+	patches.suse/octeontx2-af-Use-ptp-input-clock-info-from-firmware-.patch
 	patches.suse/gve-DQO-avoid-unused-variable-warnings.patch
 	patches.suse/octeontx2-pf-Enable-promisc-allmulti-match-MCAM-entr.patch
 	patches.suse/ice-Add-DSCP-support.patch
