octeontx2-nicvf: Add PTP hardware clock support to NIX VF (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -5176,6 +5176,7 @@
 	patches.suse/octeontx2-pf-Use-hardware-register-for-CQE-count.patch
 	patches.suse/gve-DQO-avoid-unused-variable-warnings.patch
 	patches.suse/octeontx2-pf-Enable-promisc-allmulti-match-MCAM-entr.patch
+	patches.suse/octeontx2-nicvf-Add-PTP-hardware-clock-support-to-NI.patch
 	patches.suse/ice-Add-DSCP-support.patch
 	patches.suse/ice-Add-feature-bitmap-helpers-and-a-check-for-DSCP.patch
 	patches.suse/ice-Fix-link-mode-handling.patch
